--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "preact build",
     "serve": "preact build && serve build --single",
     "dev": "preact watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
