--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "prestart": "NODE_ENV=production npm run build",
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
